--- a/index.html
+++ b/index.html
@@ -1,14 +1,62 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-<title>
-C. M. Pickell
-</title>
-<head>
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>C.M. Pickell</title>
+  <link rel="stylesheet" href="style.css">
+</head>
 <body>
+  <header>
+    <h1>C.M.&nbsp;Pickell</h1>
+    <h6>[Tagline about me]</h6>
 
+    <nav id="mainnav">
+      <a href="#about">About</a>
+      <a href="#projects">Projects</a>
+      <a href="#educert">Education</a>
+      <a href="#work">Experience</a>
+      <a href="#social">Connect</a>
+    </nav>
+  </header>
+
+  <main>
+    <section id="about">
+      <h2>Welcome to my online portfolio!</h2>
+      <p>This page is currently under construction.</p>
+    </section>
+
+    <section id="projects">
+      <h2>Featured Projects</h2>
+      <p>Coming Soon</p>
+      <!-- cards or side-scrolling list -->
+    </section>
+
+    <section id="educert">
+      <h2>Education &amp; Certifications</h2>
+      <p>Coming Soon</p>
+      <details>
+        <summary>Example of Entry</summary>
+        <p>Example contents</p>
+      </details>
+    </section>
+
+    <section id="work">
+      <h2>Work &amp; Volunteer Experience</h2>
+      <p>Coming Soon</p>
+      <details>
+        <summary>Example of Entry</summary>
+        <p>Example contents</p>
+      </details>
+    </section>
+  </main>
+
+  <footer>
+    <section id="social">
+      <h2>Connect with Me</h2>
+      <p>Coming Soon</p>
+      <!-- LinkedIn, Twitter, DEV, and Github -->
+    </section>
+  </footer>
 </body>
-
 </html>
