--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
     <h6>[Tagline about me]</h6>
 
     <nav id="mainnav">
-      <a href="#about">About</a>
-      <a href="#projects">Projects</a>
-      <a href="#educert">Education</a>
-      <a href="#work">Experience</a>
-      <a href="#social">Connect</a>
+      <ul>
+        <li><a href="#about">About</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#educert">Education</a></li>
+        <li><a href="#work">Experience</a></li>
+        <li><a href="#social">Connect</a></li>
+      </ul>
     </nav>
   </header>
 
@@ -56,6 +58,12 @@
       <h2>Connect with Me</h2>
       <p>Coming Soon</p>
       <!-- LinkedIn, Twitter, DEV, and Github -->
+      <ul> 
+      <li><a href="https://www.linkedin.com/in/chylene-pickell-1a9b5ba0/" target="_blank">LinkedIn</a></li>
+      <li><a href="https://github.com/CM-Pickell" target="_blank">Github</a></li>
+      <li><a href="https://twitter.com/cmpickell" target="_blank">Twitter</a></li>
+      <li><a href="https://dev.to/cmpickell" target="_blank">DEV</a></li>
+      </ul>
     </section>
   </footer>
 </body>
