--- a/index.html
+++ b/index.html
@@ -36,9 +36,31 @@
 
     <section id="educert">
       <h2>Education &amp; Certifications</h2>
-      <p>Coming Soon</p>
       <details>
-        <summary>Example of Entry</summary>
+        <summary>Lynda Certificates of Completion</summary>
+        <p><a href="https://www.lynda.com/AllCertificates/User/1995328933" target="_blank">Link to All Certificates</a></p>
+        <h3>Learning Paths</h3>
+        <ul>
+          <li>
+            <h4>Become a Programmer: Foundations</h4>
+            <p>Completed May 27, 2020</p>
+          </li>
+          <li>
+            <h4>Become a Software Developer</h4>
+            <p>Completed June 9, 2020</p>
+          </li>
+          <li>
+            <h4>Become an Agile Software Developer</h4>
+            <p>In Progress</p>
+          </li>
+        </ul>
+      </details>
+      <details>
+        <summary>B.Sc. Biology</summary>
+        <p>Example contents</p>
+      </details>
+      <details>
+        <summary>A.Sc. Biological Sciences</summary>
         <p>Example contents</p>
       </details>
     </section>
@@ -56,7 +78,7 @@
   <footer>
     <section id="social">
       <h2>Connect with Me</h2>
-      <ul> 
+      <ul>
         <li><a href="https://www.linkedin.com/in/chylene-pickell-1a9b5ba0/" target="_blank">LinkedIn</a></li>
         <li><a href="https://github.com/CM-Pickell" target="_blank">Github</a></li>
         <li><a href="https://twitter.com/cmpickell" target="_blank">Twitter</a></li>
