reorganized some elements

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 </head>
 <body>
   <header>
-    <h1>C.M.&nbsp;Pickell</h1>
-    <h6>[Tagline about me]</h6>
-
+    <header>
+      <h1>C.M.&nbsp;Pickell</h1>
+      <h6>[Tagline about me]</h6>
+    </header>
     <nav id="mainnav">
       <ul>
         <li><a href="#about">About</a></li>
@@ -37,9 +38,7 @@
     <section id="educert">
       <h2>Education &amp; Certifications</h2>
       <details>
-        <summary>Lynda Certificates of Completion</summary>
-        <p><a href="https://www.lynda.com/AllCertificates/User/1995328933" target="_blank">Link to All Certificates</a></p>
-        <h3>Learning Paths</h3>
+        <summary>Lynda Certificates of Completion <a href="https://www.lynda.com/AllCertificates/User/1995328933" target="_blank">(Link)</a></summary>
         <ul>
           <li>
             <h4>Become a Programmer: Foundations</h4>
