add sticky nav + simplify CSS

--- a/index.html
+++ b/index.html
@@ -8,24 +8,23 @@
 </head>
 <body>
   <header>
-    <header>
-      <h1>C.M.&nbsp;Pickell</h1>
-      <h6>[Tagline about me]</h6>
-    </header>
-    <nav id="mainnav">
-      <ul>
-        <li><a href="#about">About</a></li>
-        <li>|</li>
-        <li><a href="#projects">Projects</a></li>
-        <li>|</li>
-        <li><a href="#educert">Education</a></li>
-        <li>|</li>
-        <li><a href="#work">Experience</a></li>
-        <li>|</li>
-        <li><a href="#social">Connect</a></li>
-      </ul>
-    </nav>
+    <h1>C.M.&nbsp;Pickell</h1>
+    <h6>[Tagline about me]</h6>
   </header>
+
+  <nav>
+    <ul>
+      <li><a href="#about">About</a></li>
+      <span>|</span>
+      <li><a href="#projects">Projects</a></li>
+      <span>|</span>
+      <li><a href="#educert">Education</a></li>
+      <span>|</span>
+      <li><a href="#work">Experience</a></li>
+      <span>|</span>
+      <li><a href="#social">Connect</a></li>
+    </ul>
+  </nav>
 
   <main>
     <section id="about">
@@ -83,14 +82,19 @@
       <h2>Connect with Me</h2>
       <ul>
         <li><a href="https://www.linkedin.com/in/chylene-pickell-1a9b5ba0/" target="_blank">LinkedIn</a></li>
-        <li>|</li>
+        <span>|</span>
         <li><a href="https://github.com/CM-Pickell" target="_blank">Github</a></li>
-        <li>|</li>
+        <span>|</span>
+        <li><a href="https://codepen.io/cm-pickell" target="_blank">CodePen</a></li>
+        <span>|</span>
         <li><a href="https://twitter.com/cmpickell" target="_blank">Twitter</a></li>
-        <li>|</li>
+        <span>|</span>
         <li><a href="https://dev.to/cmpickell" target="_blank">DEV</a></li>
       </ul>
     </section>
+    <secton>
+      <p>Coded from scratch with HTML5</p>
+    </secton>
   </footer>
 </body>
 </html>
